@@ -20,18 +20,28 @@ namespace Castle.MonoRail.Framework.Adapters
 	using Castle.MonoRail.Framework;
 	using Castle.MonoRail.Framework.Internal;
 
+	/// <summary>
+	/// Adapts the <see cref="IResponse"/> to
+	/// an <see cref="HttpResponse"/> instance.
+	/// </summary>
 	public class ResponseAdapter : IResponse
 	{
-		private readonly IRailsEngineContext engine;
+		private readonly IRailsEngineContext context;
 		private readonly HttpResponse response;
 		private readonly String appPath;
 		private bool redirected;
 
-		public ResponseAdapter(HttpResponse response, IRailsEngineContext engine, String appPath)
+		/// <summary>
+		/// Initializes a new instance of the <see cref="ResponseAdapter"/> class.
+		/// </summary>
+		/// <param name="response">The response.</param>
+		/// <param name="context">The parent context.</param>
+		/// <param name="appPath">The app path.</param>
+		public ResponseAdapter(HttpResponse response, IRailsEngineContext context, String appPath)
 		{
 			this.response = response;
 			this.appPath = appPath;
-			this.engine = engine;
+			this.context = context;
 		}
 
 		/// <summary>
@@ -156,7 +166,7 @@ namespace Castle.MonoRail.Framework.Adapters
 			redirected = true;
 
 			response.Redirect(UrlInfo.CreateAbsoluteRailsUrl(
-			                   	appPath, controller, action, engine.UrlInfo.Extension), false);
+								appPath, controller, action, context.UrlInfo.Extension), false);
 		}
 
 		public void Redirect(String area, String controller, String action)
@@ -170,7 +180,7 @@ namespace Castle.MonoRail.Framework.Adapters
 				redirected = true;
 
 				response.Redirect(UrlInfo.CreateAbsoluteRailsUrl(
-				                   	appPath, area, controller, action, engine.UrlInfo.Extension), false);
+				                  	appPath, area, controller, action, context.UrlInfo.Extension), false);
 			}
 		}
 
@@ -184,11 +194,22 @@ namespace Castle.MonoRail.Framework.Adapters
 			get { return redirected; }
 		}
 
+		/// <summary>
+		/// Creates the cookie.
+		/// </summary>
+		/// <param name="name">The name.</param>
+		/// <param name="cookieValue">The cookie value.</param>
 		public void CreateCookie(String name, String cookieValue)
 		{
 			CreateCookie(new HttpCookie(name, cookieValue));
 		}
 
+		/// <summary>
+		/// Creates the cookie.
+		/// </summary>
+		/// <param name="name">The name.</param>
+		/// <param name="cookieValue">The cookie value.</param>
+		/// <param name="expiration">The expiration.</param>
 		public void CreateCookie(String name, String cookieValue, DateTime expiration)
 		{
 			HttpCookie cookie = new HttpCookie(name, cookieValue);
@@ -199,11 +220,19 @@ namespace Castle.MonoRail.Framework.Adapters
 			CreateCookie(cookie);
 		}
 
+		/// <summary>
+		/// Creates the cookie.
+		/// </summary>
+		/// <param name="cookie">The cookie.</param>
 		public void CreateCookie(HttpCookie cookie)
 		{
 			response.Cookies.Add(cookie);
 		}
 
+		/// <summary>
+		/// Removes the cookie.
+		/// </summary>
+		/// <param name="name">The name.</param>
 		public void RemoveCookie(string name)
 		{
 			response.Cookies.Remove(name);
